# arbase

./: .gitignore  CMakeLists.txt
arev_base/: CMakeLists.txt
arev_base/include/arev/: arev.h  base.h  error.h  error.inc  loop.h  math.h  time.h
arev_base/include/arev/mem/: endianness.h  reader.h  writer.h
arev_base/include/arev/net/: host.h  tcp.h
arev_base/src/: arev-linux.c  arev.c  base.c  err.c  err.h  error.c  int.c  int.h  loop.c  math.c  time-posix.c  time.c
arev_base/src/mem/: reader.c  writer.c
arev_base/src/net/: host.c
arev_http/: CMakeLists.txt
arev_http/include/arev/: http.h
arev_test/: CMakeLists.txt
arev_test/src/: main.c
